--- a/README.adoc
+++ b/README.adoc
@@ -44,7 +44,7 @@ Before coding, we need to make some adjustments to the build file:
 
 * configure a custom Vert.x `Launcher` class (that will be used as entry point when running the executable JAR)
 * add a dependency to _Protocol Buffers_
-* configuring Maven plugins to generate message classes from a `.proto` file.
+* configure Maven plugins to generate message classes from a `.proto` file.
 
 Here is the content of the `pom.xml` file you should be using:
 
